add addCrawlAccount api
